@@ -1,16 +1,16 @@
 DIST kdoc-2.0a54.tar.bz2 92430 RMD160 2806c84677da05a60437ceb4ab608adfc0996264 SHA1 f11e9a30c4c5757833c7633f1e7b907e9cf76ef6 SHA256 2946b520042dc57d9ca8a5ef789fa372d7a004d6e07f18efa55c0d61b5936451
-EBUILD kdoc-2.0_alpha54.ebuild 654 RMD160 765b1adc702ab677f254b10390d9870ff6b5a7e2 SHA1 84f1f9e15ae5c8fab0138fbfd63be522bbffc88d SHA256 aba91c3dfd5af8fe4ad4a4f7cffc12d649ee024063121591bbaad32d299df6e7
-MD5 acaa55620397c9a2e185f57d8fa4c799 kdoc-2.0_alpha54.ebuild 654
-RMD160 765b1adc702ab677f254b10390d9870ff6b5a7e2 kdoc-2.0_alpha54.ebuild 654
-SHA256 aba91c3dfd5af8fe4ad4a4f7cffc12d649ee024063121591bbaad32d299df6e7 kdoc-2.0_alpha54.ebuild 654
-MISC ChangeLog 982 RMD160 4f8b11488e8581fa73577e2b715a11c82af73b78 SHA1 b2f0ca275308bae7e3109fb7f7cf93a5eeced440 SHA256 a954aa95ff6d87c2306f0d32c24a8dcb6e050cd84d74df8abdad9adc56baa258
-MD5 8016b04a26b5562c773e79135d9c5111 ChangeLog 982
-RMD160 4f8b11488e8581fa73577e2b715a11c82af73b78 ChangeLog 982
-SHA256 a954aa95ff6d87c2306f0d32c24a8dcb6e050cd84d74df8abdad9adc56baa258 ChangeLog 982
-MISC metadata.xml 210 RMD160 c9fe92a44d079ef04bcdd31de9867de5bb9f26e5 SHA1 efa00493ddec7289a21bc4cbcc6e95ec4de749d5 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39
-MD5 c667f921ee8d48ce17ebef0f8d601ea4 metadata.xml 210
-RMD160 c9fe92a44d079ef04bcdd31de9867de5bb9f26e5 metadata.xml 210
-SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39 metadata.xml 210
+EBUILD kdoc-2.0_alpha54.ebuild 562 RMD160 09ed053cbf0ff2405dacae9d9626ef731723a6aa SHA1 c12d26c36ecd7e3a7ea1e2c8342f8b128dee6e9c SHA256 c28347775e89589ecc7739beb86a06d8c347bc1f330f908858343da3b487efd9
+MD5 d88ea4144f212ccd875b7ec353c3e524 kdoc-2.0_alpha54.ebuild 562
+RMD160 09ed053cbf0ff2405dacae9d9626ef731723a6aa kdoc-2.0_alpha54.ebuild 562
+SHA256 c28347775e89589ecc7739beb86a06d8c347bc1f330f908858343da3b487efd9 kdoc-2.0_alpha54.ebuild 562
+MISC ChangeLog 1201 RMD160 2a732c51e740be577e9e0a4278621b344bedfc4e SHA1 002c400067db077e0ad6f7c3a4d14de718945fe4 SHA256 fca6e4c2c3f067078e83ab9dc4015ea15d9e8769a301cdeaddc2662023c840c3
+MD5 d738976597a8358b6f4c8d6ea534c1a3 ChangeLog 1201
+RMD160 2a732c51e740be577e9e0a4278621b344bedfc4e ChangeLog 1201
+SHA256 fca6e4c2c3f067078e83ab9dc4015ea15d9e8769a301cdeaddc2662023c840c3 ChangeLog 1201
+MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
+MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
+RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
+SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a metadata.xml 156
 MD5 76802d0e7b260fa6171ff49b3dfa141d files/digest-kdoc-2.0_alpha54 235
 RMD160 fa20127f61c32618ffdc0866bc6f10b57c632239 files/digest-kdoc-2.0_alpha54 235
 SHA256 1f845b7f87a39edafbb9cd1d60bd352f88c2dfb341ed835e125189f051098f86 files/digest-kdoc-2.0_alpha54 235
