@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/kdoc
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/kdoc/ChangeLog,v 1.10 2004/06/25 02:38:23 agriffis Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/kdoc/ChangeLog,v 1.12 2006/11/25 20:09:36 masterdriverz Exp $
+
+  25 Nov 2006; Charlie Shepherd <masterdriverz@gentoo.org> metadata.xml:
+  Kde gets this...
+
+  25 Nov 2006; Charlie Shepherd <masterdriverz@gentoo.org>
+  kdoc-2.0_alpha54.ebuild:
+  Clean up ebuild, use kde.eclass
 
   25 Apr 2004; Aron Griffis <agriffis@gentoo.org> kdoc-2.0_alpha54.ebuild:
   Add die following econf for bug 48950
